--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="javascript" href="index.js">
+    <title>Rock,Paper,Scissors</title>
 </head>
 <body>
+    <h1>Welcome to Rock, Paper, Scissors</h1>
+    <h2>You are not ready!!</h2>
+    <h3>Let the games begin!!!</h3>
+    <main id="outcomes-container">
+    </main>
 
-<button id="generate-greeting">Click Here</button>
+<button id="rock">Rock</button>
+<button id="paper">Paper</button>
+<button id="scissors">Scissors</button>
+<script>
+</script>
 </body>
 </html>
